# propresenter-autofix

./: .gitignore  README.md  main.py  pyproject.toml  scraper.py  songs.sqlite
src/propresenter/: __init__.py  constants.py  database.py  info_template.pro  info_template_old.pro  model.py  types.py  utils.py
src/protobuf/: action_pb2.py  alignmentGuide_pb2.py  audio_pb2.py  background_pb2.py  baseDocument_pb2.py  calendar_pb2.py  ccli_pb2.py  clearGroups_pb2.py  cue_pb2.py  effects_pb2.py  graphicsData_pb2.py  groups_pb2.py  input_pb2.py  keymapping_pb2.py  labels_pb2.py  layers_pb2.py  library_pb2.py  liveVideoPlaylist_pb2.py  macros_pb2.py  masks_pb2.py  messages_pb2.py  planningCenter_pb2.py  playlistTemplate_pb2.py  playlist_pb2.py  presentationSlide_pb2.py  presentation_pb2.py  proApiV1BasicTypes_pb2.py  proApiV1_pb2.py  proApi_pb2.py  proAudienceLook_pb2.py  proCore_pb2.py  proMask_pb2.py  propDocument_pb2.py  propSlide_pb2.py  propresenter_pb2.py  proscreen_pb2.py  proworkspace_pb2.py  recording_pb2.py  screens_pb2.py  slide_pb2.py  (+7 more)
