[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "propresenter"
version = "1.0.0"
description = "Create infoslides for ProPresenter"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "protobuf>=6.33.0",
    "requests>=2.32.5",
]

[tool.hatchling.build]
packages = ["src/propresenter", "src/protobuf"]

[tool.hatchling.build.targets.wheel.shared-data]
"propresenter/data" = { source = "src/propresenter/data", target = "propresenter/data" }

[dependency-groups]
dev = [
    "grpcio-tools>=1.75.1",
    "ruff>=0.13.2",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "app", "scripts"]
respect-gitignore = true
force-exclude = true

[tool.ruff.format]
# Formatter is Black-compatible but configurable
quote-style = "double"

[tool.ruff.lint]
# Ruff defaults already include: F (Pyflakes) + a safe subset of E (pycodestyle)
extend-select = [
  "I",     # import sorting (isort-equivalent)
  "UP",    # pyupgrade: modernize syntax
  "B",     # bugbear: likely bugs, footguns
  "SIM",   # flake8-simplify: cleaner control flow
  "C4",    # flake8-comprehensions: misuse / simplifications
  "C90",   # mccabe complexity - statements are too complex
  "PGH",   # pygrep-hooks: hygiene around noqa / debug patterns
  "A",     # flake8-builtins: shadowing 'id', 'type', ...
  "ARG",   # flake8-unused-arguments: check for unused arguments
  "PERF",  # perflint: micro-optimizations in hot paths
  "DTZ",   # flake8-datetimez: timezone-aware datetime usage
  "ISC",   # flake8-implicit-str-concat: implicit string concat mistakes
  "PIE",   # flake8-pie: small correctness/readability wins
  "LOG",   # flake8-logging: logging best practices
  "G",     # flake8-logging-format: logging message formatting rules
  "INP",   # flake8-no-pep420: disallow implicit namespace pkgs (missing __init__.py)
  "ANN",   # flake8-annotations: type-annotation policy
  "FIX",   # flake8-fixme: check for FIXME comments
  "PTH",   # flake8-pathlib: check for pathlib usage
  "N",     # pep8-naming: ClassName, function_name, etc.
  "FURB",  # refurb: rules for modernizing code
  "RUF",   # Ruff-specific: e.g., unused noqa, etc.
]

extend-ignore = [
    "E501",  # Line too long (let formatter wrap lines instead)
    "B023",  # Function definition does not bind loop variable
]

# Stricter, but not chaotic:
explicit-preview-rules = true  # require explicit opt-in for preview rules

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.mccabe]
max-complexity = 16

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true
